force-app/main/default/objects/GRN_Line__c/fields/Return_Qty__c.field-meta.xml
<CustomField>
    <fullName>Return_Qty__c</fullName>
    <label>Return Qty</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>