force-app/main/default/objects/GRN_Line__c/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <label>Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Damaged</fullName><default>false</default><label>Damaged</label></value>
            <value><fullName>Items not received</fullName><default>false</default><label>Items not received</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>